Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerTextObj.quorum
Text t
t:SetValue("5")
integer i = cast(integer, t)